assets/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Kanit:ital@1&family=Noto+Sans&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    background: 
        url(../images/background.jpg)
        no-repeat
        fixed
        top center / auto 120%
        #8ab5ff; 
        min-height: 100vh;
    }

h1 {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 40px;
    color: #131e27;
    margin: 5px 0;
}

h2, h3 {
    font-family: Kanit, sans-serif;
    color: #25394a;
}

p {
    font-family: 'Noto Sans', sans-serif;
    line-height: 1.3;
}


/* Header */

.header-background {
    background-color: rgba(37, 57, 74, .4);
    width: 100%;
    height: 20vh;
}

.header-flexbox {
    height: 100%;
    width: auto;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-flow: column;
}

.minecraft-logo {
    height: 20%;
    width: auto;
    margin: 0 auto;
}

.madminers-header {
    height: 60%;
    width: auto;
    margin: 0 auto;
    padding-top: 5px;
}

.main-area-box {
    display: flex;
    justify-content: center;
    margin-top: 15px;
}

/* Navigation Bar*/

.nav-box {
    width: 200px;
    height: fit-content;
    background-color: rgba(37, 57, 74, .4);
    margin-right: 10px;
    padding: 10px 5px 10px 0px;
    border: #3b6385 outset 2px;
    border-radius: 0 20px 0 0;
    display: flex;
    flex-flow: column nowrap;
}


.nav-option {
    background-color: transparent;
    display: flex;
    margin: 5px auto;
    text-decoration: none;
}

.nav-text {
    width: 130px;
    height: 25px;
    background-color: #25394a;
    color: #e7f3ff;
    padding: 3px 5px 3px 10px;
    margin-left: 5px;
    font-family: 'Kanit', sans-serif;
    font-size: 110%;
    letter-spacing: 1px;
    border: solid #000 1px;
    border-radius: 0 8px 0 0;
}

#discord-link {
    text-align: center;
    margin-top: 5px;
    text-decoration: none;
    color: #e7f3ff;
    background: #25394a;
    padding: 15px;
    margin: 10px;
    border-radius: 8px;
    border: solid 1px #000;
}

#discord-link h2 {
    font-size: 115%;
    color: inherit;
}

#discord-logo {
    font-size: 300%;
}

.nav-text:hover, .option-active, #discord-link:hover, .members-option:hover, #submit:hover {
    background-color: #d4e9ff;
    color: #25394a;
}

/* Main Article */

#article-box {
    width: 650px;
    height: auto;
    min-height: 90vh;
    background-color: rgba(212, 233, 255, .6);
    border: #3b6385 outset 2px;
    border-radius: 0 40px 0 0;
    padding-top: 20px;
}

.align-center {
    text-align: center;
}

#article-box hr {
    border: solid 1px #131e27;
    margin: 15px 20px;
}

#values {
    margin: 15px 40px;
    display: inline-block;
}

#values > div {
    width: 45%;
    background-color: rgba(255, 255, 255, .4);
    padding: 10px 20px 20px;
    border-radius: 0 20px 0 0;
    margin-bottom: 15px;
}

.values-float-left {
    float: left;
}

#values h3 {
    margin: 7px 0
}

.values-imgs {
    width: 40%;
    height: auto;
    border-radius: 50%;
    border: #3b6385 3px outset;
    position: relative; 
    top: 20px;
}

.values-float-right {
    float: right;
}

/* Server Info */

#info-navigation {
    width: 90%;
    height: 65px;
    margin: 0 auto;
    display: flex;
    justify-content:center;
    align-content: center;
    background-color: rgba(37, 57, 74, .4);
    border-radius: 0 20px 0 0;
}

.info-nav-option {
    font-family: 'Kanit', sans-serif;
    font-weight: 700;
    text-align: center;
    text-decoration: none;
    margin: auto 20px;
}

#map {
    width: 50%;
    margin: 15px 25% 0;
}

.captions {
    font-family: 'Noto Sans', sans-serif;
    font-size: small;
    color: #131e27;
    font-weight: 700;
}

#map-captions {
    margin-left: 25%;
}

.info-text {
    margin: auto 8%;
    color: #131e27;
}

.tech-list {
    font-family: 'Noto Sans', sans-serif;
    list-style: none;
    padding-top: 10px;
}

#nodecraft {
    text-decoration: none;
}

.hr-div {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 20px;
    margin: 20px 0;
}

.hr-div hr {
    width: 80%;
    margin-right: 0;
}

.go-top {
    order: 2;
    font-family: Kanit, sans-serif;
    font-weight: 700;
    font-size: 110%;
    text-decoration: none;
    color: #131e27;
}

.header-margin {
    margin-top: 10px;
}

.datapack-list {
    font-family: 'Noto Sans', sans-serif;
    margin: 5px 8% 5px 10%;
}

/* Members */

.member-recognition {
    width: 80%;
    font-weight: 700;
    font-size: 80%;
    text-align: center;
    margin: 0 auto;
}

#members-nav {
    height: fit-content;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    background-color: rgba(37, 57, 74, .4);
    padding: 10px 0;
}

.members-option {
    height: 25px;
    text-decoration: none;
    font-family: Kanit, sans-serif;
    color: #e7f3ff;
    background: #25394a;
    padding: 3px 7px;
    margin: 3px 0;
    border: 1px solid #000;
    border-radius: 0 10px 0 0;
}

.member-section {
    margin: auto 8%;
}

.social-links {
    color: #131e27;
}

.member-img {
    height: 200px;
    float: right;
    margin-top: 15px;
    margin-right: 5px;
}

.member-presentation {
    background-color: rgba(255, 255, 255, .4);
    padding: 15px 20px;
    margin-top: 10px;
    border-radius: 0 20px 0 0;
}

.yt-frame {
    height: fit-content;
    width: fit-content;
    margin: 15px auto;
    padding: 0 25%;
}

.screenshot-box {
    background-color: #25394a;
    overflow-x: scroll;
    overflow-y: hidden;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    white-space: nowrap;
    width: 400px;
    height: 270px;
    max-width: 90%;
    margin: auto;
    border-radius: 0 20px 0 0;
    border: #3b6385 3px outset;
    margin-top: 15px;
}

.screenshots {
    height: 250px;
    width: 400px;
    margin-right: 3px;
    scroll-snap-align: center;
}

#mcooz-pic {
    margin-top: 25px;
    margin-right: 15px;
}

#damalas-pic {
    height: 130px;
    margin-top: 25px;
    margin-right: 15px;
}

/* How To Join */

.join-explanation {
    margin-top: 10px;
    font-size: 80%;
}

.disclamer {
    width: 80%;
    margin: 15px auto;
    line-height: 100%;
}

#form {
    max-width: 80%;
    height: fit-content;
    background-color: rgba(255, 255, 255, .4);
    margin: 30px auto;
    padding: 20px;
    border-radius: 0 40px 0 0;
}

#form-inner-box {
    width: 90%;
    margin: 15px auto;
}

.form-label {
    font-family: kanit, sans-serif;
    font-size: 20px;
    color: #25394a;
    font-weight: 400;
}

.text-input {
    font-family: 'Noto Sans', sans-serif;
    font-size: 100%;
    padding: 2px;
    margin-bottom: 20px;
}

.form-element {
    margin-bottom: 20px;
}

.checkbox-label {
    font-family: Kanit, sans-serif;
    color: #25394a;
}

.checkbox {
    margin-left: 5px;
    height: 20px;
    vertical-align: middle;
}

.number-input {
    width: 70px;
}

#submit {
    font-weight: 700;
    color: #e7f3ff;
    background-color: #131e27;
    width: 100px;
    height: 50px;
    border-radius: 10px;
}

/* Form Submit Page and 404 Page */

.thankyou {
    width: 80%;
    margin: 10% auto;
}

#maddie-point {
    width: 30%;
    margin:  0 35% 50px;
}

#error {
    font-size: 600%;
    margin-top: 30px;
}

#mad-and-coop {
    width: 80%;
    margin: 30px 10%;
    border: 3px outset #3b6385;
    border-radius: 0 30px 0 0;
}


/* Footer */

footer {
    height: 70px;
    background-color: rgba(37, 57, 74, .4);
    margin-top: 15px;
}

footer h3 {
    text-align: center;
    color: #fff;
    font-family: 'Noto Sans', sans-serif;
    position: relative;
    top: 30%;
}

/* Media queries */

@media screen and (max-width: 950px) {
    .madminers-header {
        width: 60%;
        height: auto;
    }
    .minecraft-logo {
        width: 20%;
        height: auto;
    }
}

@media screen and (max-width: 850px) {
    .main-area-box {
        flex-flow: column nowrap;
        justify-content: center;
    }

    .nav-box {
        margin: 0 auto;
        width: 90vw;
    }

    .nav-text {
        width: 50vw;
    }

    #discord-link {
        width: 55vw;
        margin: 0 auto;
    }

    #article-box {
        margin: 5% auto;
        width: 90vw;
    }

    #values {
        margin: 5%;
    }

    #values > div {
        width: 80%;
        height: auto;
        display: block;
        margin: 0 5%;
    }

    .values-imgs {
        width: 60%;
        margin: 15px 20%;
        position: relative;
        top: 0;
    }

    #info-navigation {
        flex-flow: column nowrap;
        justify-content: center;
        align-items: center;
        margin: 0 auto;
        width: 90%;
        height: 120px;
        padding: 15px 0;
    }

    .info-nav-option {
        width: 70%;
    }

    .yt-frame {
        margin: 15px auto;
        padding: 0;
    }
}

@media screen and (max-width: 800px) {
    .madminers-header {
        width: 70%;
        height: auto;
    }

    .minecraft-logo {
        width: 25%;
        height: auto;
    }
}

@media screen and (max-width: 500px) {
    .header-background{
        height: 13vh;
    }
    .madminers-header {
        width: 80%;
        height: auto;
    }

    .minecraft-logo {
        width: 30%;
        height: auto;
    }

    body {
        background: #8ab5ff;
    }

    .hr-div hr {
        width: 60vw;
    }

    .go-top {
        margin-right: 0;
    }

    .screenshot-box {
        width: 280px;
        height: 200px;
    }

    .screenshots {
        width: 300px;
        height: auto;
    }

    .member-img {
        height: 150px;
    }

    #damalas-pic {
        height: 90px;
    }

}

@media screen and (max-height: 500px) { 
    .madminers-header {
        height: 20vh;
        width: auto;
    }
    .minecraft-logo {
        display: none;
    }
    body {
        background: #8ab5ff;
    }
}

